# tcl-mdi

./: .gitmodules  AGENTS.md  README.md  pyproject.toml  run.sh
doc/: drill_centreline_and_homing.md  gcode_dialects.md  roadmap.md  tool_setup_operator_guide.md
tcl_lathe_hmi/: __init__.py  main.py
tcl_lathe_hmi/backends/: __init__.py  fred.py  sim.py
tcl_lathe_hmi/cam/: __init__.py  generator.py  models.py  solid.py
tcl_lathe_hmi/config/: __init__.py  defaults.py
tcl_lathe_hmi/gcode/: __init__.py  actions.py  lexer.py  parser.py  preview.py  validation.py
tcl_lathe_hmi/machine/: __init__.py  backend.py  command_pipeline.py  service.py  state.py  toolchanger.py
tcl_lathe_hmi/tools/: __init__.py  manager.py  table.py
tcl_lathe_hmi/ui/: __init__.py  app.py  canvases.py  controls.py  dro.py  form_values.py  jog_queue.py  keypad.py  widgets.py
tcl_lathe_hmi/ui/panels/: __init__.py  cam.py  manual.py  program.py  setup.py  tools.py
tests/: test_cam.py  test_fred_backend.py  test_gcode_lexer.py  test_gcode_parser.py  test_gcode_validation.py  test_machine_service.py  test_main.py  test_milestone4_safety.py  test_service_actions.py  test_sim_backend.py  test_tool_table.py  test_ui_touch.py
