[project]
name = "tcl-lathe-hmi"
version = "0.1.0"
description = "Kivy HMI for the TCL lathe using FRED USB control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kivy>=2.3.0",
    "trimesh>=4.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
tcl-lathe-hmi = "tcl_lathe_hmi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
