[project]
name = "tcl-lathe-hmi"
version = "0.1.0"
description = "Kivy HMI for the TCL lathe using FRED USB control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kivy>=2.3.0",
    "pygments>=2.15",
    "trimesh>=4.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=7.4",
    "types-Pygments>=2.19",
]

[project.scripts]
tcl-lathe-hmi = "tcl_lathe_hmi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
files = ["tcl_lathe_hmi", "tests"]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "kivy.*",
    "liblathe.*",
]
ignore_missing_imports = true
